--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     working_dir: /app
     volumes:
       - .:/app
-    command: streamlit run app.py --server.address=0.0.0.0
+    command: streamlit run setup.py --server.address=0.0.0.0
     ports:
       - "8501:8501"
     environment:
       - PYTHONUNBUFFERED=1
       - STREAMLIT_SERVER_HEADLESS=true
       - STREAMLIT_SERVER_PORT=8501
-      - STREAMLIT_APP=app.py
+      - STREAMLIT_APP=setup.py
     restart: unless-stopped
     labels:
       coolify.service: "true"
