--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   streamlit:
     image: python:3.9-slim
     container_name: streamlit_app
-    working_dir: /app
+    working_dir: /
     volumes:
-      - .:/app
+      - .:/
     command: streamlit run setup.py --server.address=0.0.0.0
     ports:
       - "8501:8501"
