--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   streamlit:
     image: python:3.9-slim
     container_name: streamlit_app
-    working_dir: /
+    working_dir: /plannotate
     volumes:
-      - .:/
+      - .:/plannotate
     command: streamlit run setup.py --server.address=0.0.0.0
     ports:
       - "8501:8501"
@@ -12,7 +12,7 @@ services:
       - PYTHONUNBUFFERED=1
       - STREAMLIT_SERVER_HEADLESS=true
       - STREAMLIT_SERVER_PORT=8501
-      - STREAMLIT_APP=setup.py
+      - STREAMLIT_APP=streamlit_app.py
     restart: unless-stopped
     labels:
       coolify.service: "true"
